--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,9 +2,9 @@ name: OnlyAliveOnWood
 version: ${project.version}
 main: net.kunmc.lab.onlyaliveonwood.OnlyAliveOnWood
 api-version: 1.16
-description: 木材から落ちたら死ぬクラフト
-authors: [ chanmo7na ]
+authors: [chanmo7na]
 commands:
   aliveonwood:
-    description: 木材から落ちたら死ぬクラフト
-    aliases: [oaow]
+    description: OnlyAliveOnWood Main Command
+    usage: /aliveonwood <start | stop>
+    permission: op
